<resources>
    <!--Profile Strings!-->
    <string name="app_name">StudyBuddy</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_school">School</string>
    <string name="profile_major">Major</string>
    <string name="profile_year">Year</string>
    <string name="profile_courses">Courses</string>
    <string name="profilegroup_empty">You are currently not in a group</string>

    <string name="profile_schoolText">School</string>
    <string name="profile_majorText">Major</string>
    <string name="profile_yearText">Year</string>
    <string name="profile_coursesText">Courses</string>

    <!--Scheduler Strings-->
    <string name="studyPlace_button">Places</string>
    <string name="places_text">View Study Places: </string>
    <string name="schedule_text">View Schedule: </string>
    <string name="click_calendar">Select a date to add a study session to your calendar</string>
    <string name="scheduler_button">View Events</string>

    <!--Group Strings-->
    <string name="group">Groups</string>
    <string name="friend">Friends</string>
    <string name="create_button">Create</string>
    <string name="add_button">Add Friends</string>
    <string name="create_groups">Click Create to add new Groups!</string>
    <string name="add_friends">Click Add to find new friends!</string>

    <!-- Login Strings -->
    <string name="studybuddy_status_fmt">StudyBuddy User: %s</string>
    <string name="studdybuddy_user_management">StudyBuddy User Management</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="desc_studybuddylogo">StudyBuddy logo and name</string>

    <!-- MainActivity Strings -->
    <string name="search_hint">Search</string>
    <string name="school_search">School</string>
    <string name="search_button">Go</string>

    <!-- Menu Items -->
    <string name="options_settings">Settings</string>
    <string name="options_signout">Sign Out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="year_prompt">Choose a year</string>
    <string-array name="year_array">
        <item>Year</item>
        <item>Freshman</item>
        <item>Sophomore</item>
        <item>Junior</item>
        <item>Senior</item>
    </string-array>

    <string-array name="search_options">
        <item>Class</item>
        <item>School</item>
        <item>Title</item>
        <item>Creator</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <string-array name="schools_list">
        <item>Florida Agricultural and Mechanical University</item>
        <item>Florida Atlantic University</item>
        <item>Florida Gulf Coast University</item>
        <item>Florida International University</item>
        <item>Florida Polytechnic University</item>
        <item>Florida State University</item>
        <item>New College of Florida</item>
        <item>University of Central Florida</item>
        <item>University of Florida</item>
        <item>University of North Florida</item>
        <item>University of South Florida</item>
        <item>University of West Florida</item>
    </string-array>
    <string name="title_activity_rating_display">RatingDisplay</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
