<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"

    tools:context="edu.usf.devices.mobile.studybuddy.TabFragment3">


    <ImageView
        android:id="@+id/ProfileImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:contentDescription="Profile Picture"
        android:paddingBottom="5dp"
        android:src="@drawable/stock" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/profile_name"
        android:textSize="18dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/schoolText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/profile_schoolText"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/schoolView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingEnd="5dp"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:text="@string/profile_school"
            android:textSize="15dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/majorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/profile_majorText"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/majorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:text="@string/profile_major"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yearText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/profile_yearText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/yearView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:text="@string/profile_year"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/coursesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/profile_coursesText"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coursesView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:text="@string/profile_courses"
            android:textSize="15dp" />

    </LinearLayout>


</LinearLayout>
