<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="10dp"
    tools:context="edu.usf.devices.mobile.studybuddy.TabFragment4">

    <TextView
        android:id="@+id/groupsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_groups"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/create_button" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"/>

    <ListView
        android:id="@+id/profileGroups"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:longClickable="true" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/profilegroup_empty"
        android:textSize="15sp" />

</LinearLayout>
